hphp/hack/test/typecheck/references/refs_in_array/element_assign2.php.exp
File "element_assign2.php", line 5, characters 8-13:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
